Changed project layout. Backbone for base classes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,14 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
 
 set(SOURCE_FILES
-        CubeModel.cpp
-        GLSLProgramCompiller.cpp
-        Main.cpp
-        Utils.cpp
-        Window.cpp
-        Material.cpp
-        Material.h
-        )
+        src/CubeModel.cpp
+        src/Utils/GLSLProgramCompiller.cpp
+        src/Main.cpp
+        src/Utils/Utils.cpp
+        src/Utils/Window.cpp
+        src/Material/Material.cpp
+        src/Material/Material.h
+        src/Model/Mesh.cpp src/Model/Mesh.h src/Model/Model.cpp src/Model/Model.h src/Light/Light.cpp src/Light/Light.h)
 
 find_package(GLFW3 REQUIRED)
 message(STATUS "Found GLFW3 in ${GLFW3_INCLUDE_DIR}")
