--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(SOURCE_FILES
         src/Model/Model.cpp
         src/Light/Light.cpp
         src/Material/Texture.cpp
-        )
+        src/Scene/Scene.cpp src/Scene/Scene.h src/Camera/Camera.cpp src/Camera/Camera.h)
 
 find_package(GLFW3 REQUIRED)
 message(STATUS "Found GLFW3 in ${GLFW3_INCLUDE_DIR}")
