Added lightning - Direct for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,14 @@ set(SOURCE_FILES
         src/Model/Model.cpp
         src/Light/Light.cpp
         src/Material/Texture.cpp
-        src/Scene/Scene.cpp src/Scene/Scene.h
-        src/Camera/Camera.cpp src/Camera/Camera.h
-        src/Model/MeshFactory.cpp src/Model/MeshFactory.h src/Renderer.cpp src/Renderer.h src/Scene/Group.cpp src/Scene/Group.h)
+        src/Scene/Scene.cpp
+        src/Camera/Camera.cpp
+        src/Model/MeshFactory.cpp
+        src/Renderer.cpp
+        src/Scene/Group.cpp
+        src/Light/PointLight.cpp
+        src/Light/DirectLight.cpp
+        src/Light/SpotLight.cpp)
 
 find_package(GLFW3 REQUIRED)
 message(STATUS "Found GLFW3 in ${GLFW3_INCLUDE_DIR}")
